added indexer api, additional swagger docs, moved sparql lib to indexer
